--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
-  <title>Document</title>
+  <title>Tic Tac Toe</title>
 </head>
 <body>
     <h1 class="title">Tic <span>Tac</span> Toe</h1>
